# mcp-metar

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml  pypi-publish.yml
src/mcp_metar/: __init__.py  __main__.py  _client.py
src/mcp_metar/adapters/: __init__.py  http.py
src/mcp_metar/cli/: __init__.py  server.py
src/mcp_metar/core/: __init__.py  models.py
tests/: conftest.py  test_client.py  test_server.py
