[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-metar"
version = "0.1.0"
description = "MCP server for METAR/TAF aviation weather data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijdario@gmail.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
mcp = ["fastmcp"]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-metar[dev,test,lint]"]

[project.scripts]
mcp-metar = "mcp_metar.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/mcp-metar"
Repository = "https://github.com/daedalus/mcp-metar"
Issues = "https://github.com/daedalus/mcp-metar/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_metar"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_metar"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
omit = ["tests/*", "*/__init__.py", "*/__main__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]